assets/style.css
.is-readable-column {
    min-height: 625px;
    max-width: 700px;
    line-height: 1.7;
}

ul.paging-example {
    margin-top: 0;
    margin-left: 0;
}

.paging-example li {
    list-style-type: none;
}

.is-spaced-footer-link {
    margin-left: 3rem;
}

.credits {
    margin-top: 2em;
}

.has-text-underlined {
    text-decoration: underline;
}

.share-link {
    margin-right: .25rem;
}

.hidden {
    display: none;
}

.rss-icon {
    vertical-align: sub;
    fill: white;
}

/* Loading spinner - https://loading.io/css/ */
.lds-dual-ring {
  display: inline-block;
  width: 64px;
  height: 64px;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 46px;
  height: 46px;
  margin: 1px;
  border-radius: 50%;
  border: 5px solid #fff;
  border-color: rgba(14, 30, 37, 0.54) transparent rgba(14, 30, 37, 0.54) transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* YouTube Shortcode */
div.youtube {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
}

div.youtube iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border:0;
}

